# sld2bnd

./: CMakeLists.txt  COPYRIGHT  README.md  sld2bnd.c  y.tab.c  y.tab.h
arit/: arit.c  libarit.txt  linres.c
data-sld/: bras1.sld  bras2.sld  bras3.sld  bras3_hold.sld  bras4.sld  bras5.sld  bras6.sld  mire.sld  test.sld
include/: 3dface.h  arit.h  bddgin.h  bound.h  chrono.h  cmstack.h  definitions.h  defs.h  extern.h  geom.h  geometrie.h  graph.h  imstack.h  lex.h  lgrc_type.h  light.h  liredxf.h  lissage.h  my.h  polyline.h  rdstack.h  register.h  render.h  rfstack.h  scan.h  shade.h  slstack.h  solid.h  solidxf.h  sortir.h  surface.h  tmstack.h  unifier_normales.h  universe.h  view.h  visuff.h  vogl_ansi.h  vport.h  vwstack.h
io/: boundio.c  gram.sldbnd.y  keyword.c  lex.c  libio.txt  scale.c
stack/: cmstack.c  imstack.c  libstack.txt  rdstack.c  rfstack.c  slstack.c  tmstack.c  vwstack.c
surface/: block.c  bound.c  box.c  cardioide.c  compress.c  cone.c  cssp.c  cylinder.c  fractal.c  grid.c  libsurface.txt  oper.c  patch.c  pipe.c  reduce.c  sphere.c  strip.c  torus.c  wedge.c
